@@ -378,13 +378,6 @@ extern int alpha_compare PARAMS ((const void *, const void *));
 extern void print_spaces PARAMS ((unsigned int));
 extern FILE *open_tmpfile PARAMS ((char **, const char *));
 
-#ifndef NO_ARCHIVES
-extern int ar_name PARAMS ((char *));
-extern void ar_parse_name PARAMS ((char *, char **, char **));
-extern int ar_touch PARAMS ((char *));
-extern time_t ar_member_date PARAMS ((char *));
-#endif
-
 extern int dir_file_exists_p PARAMS ((char *, char *));
 extern int file_exists_p PARAMS ((char *));
 extern int file_impossible_p PARAMS ((char *));
